--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@
   src: url(fonts/Norse.otf);
 }
 
+div, img, p {
+  border: 1px solid black;
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -28,23 +32,23 @@ h1 {
 h2 {
   font-size: 1.5em;
   font-weight: bold;
+  color: #636363;
 }
 
 h3 {
   font-size: 1.25em;
   font-weight: bold;
+  color: #636363;
 }
 
 h4 {
   text-transform: uppercase;
   font-size: 0.75em;
+  color: #636363;
 }
 
 h6 {
   font-size: 2.5em;
-}
-
-h2, h3, h4, h6 {
   color: #636363;
 }
 
@@ -150,6 +154,12 @@ button:hover {
 }
 
 .progress-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.inner-progress {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -290,4 +300,302 @@ button:hover {
 .comments-icon:hover ~ .comment-container, .comment-container:hover, .users-container:hover ~ .comment-container {
   bottom: 12.5em;
   opacity: 1.0;
+}
+
+@media (max-width: 64em) {
+
+  body {
+    display: flex;
+    flex-direction: column;
+  }
+
+  a {
+    text-decoration: none;
+    color: #636363;
+    font-size: 1.5em;
+    font-weight: 500;
+  }
+
+  a:hover {
+    color: #000;
+  }
+
+  h1 {
+    font-size: 2.5em;
+    color: #FB8C00;
+    margin-bottom: 1em;
+  }
+
+  h2 {
+    font-size: 1.5em;
+    font-weight: bold;
+    color: #636363;
+  }
+
+  h3 {
+    font-size: 1.25em;
+    font-weight: bold;
+    color: #636363;
+  }
+
+  h4 {
+    text-transform: uppercase;
+    font-size: 0.75em;
+    color: #636363;
+  }
+
+  h6 {
+    font-size: 2.5em;
+    color: #636363;
+  }
+
+  p {
+    margin: 1em 0;
+    font-size: 1.25em;
+    color: #888;
+  }
+
+  button {
+    color: white;
+    padding: 0.75em 3em;
+    font-size: 1.25em;
+    font-weight: bold;
+    border-radius: 5px;
+    border: none;
+    margin: 1em 0;
+    box-shadow: 2px 2px 1px rgba(0,0,0,0.2);
+    cursor: pointer;
+  }
+
+  button:hover {
+    opacity: 0.6;
+  }
+
+  #continue-button {
+    background-color: hsl(180, 95%, 42%);
+  }
+
+  #discord-button {
+    background-color: #FB8C00;
+  }
+
+  .bold-text {
+    font-weight: bold;
+  }
+
+  .dashboard-username {
+    font-size: 1.25em;
+    color: #333;
+  }
+
+  .main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    font-size: 1.25em;
+  }
+
+  .dashboard-container {
+    box-shadow: 0 20px 10px -10px rgba(0,0,0,0.08);
+  }
+
+  .main > div {
+    padding: 2.5em 0 1.5em 0;
+    width: 80%;
+  }
+
+  .fab.orange600 {
+    color: #FB8C00;
+  }
+
+  .fab.orange600:hover {
+    color: #000;
+  }
+
+  .logo-text {
+    font-family: "Norse";
+    color: #FB8C00;
+    font-size: 2em;
+    font-weight: 600;
+  }
+
+  .sm-img {
+    height: 2em;
+  }
+
+  .med-img {
+    height: 5em;
+  }
+
+  .lrg-img {
+    height: 8em;
+  }
+
+  .menu-img {
+    padding-left: 1em;
+  }
+
+  .header {
+    display: flex;
+  }
+
+  .menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .menu-link, .menu-divider {
+    margin: 0.25em 0.25em;
+  }
+
+  .progress-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .inner-progress {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .progress-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 10px solid hsla(110,0%,5%,0.2);
+    border-radius: 50%;
+    margin: 0.5em 0 1em;
+    width: 5.5em;
+    height: 5.5em;
+  }
+
+  .foundations-logo {
+    display: none;
+    height: 5.5em;
+  }
+
+  .progress-icon:hover {
+    cursor: pointer;
+    border: none;
+  }
+
+  .progress-icon:hover > .foundations-logo {
+    display:inline;
+  }
+
+  .progress-icon:hover > .completion-indicator {
+    display: none;
+  }
+
+  .completion-indicator {
+    padding: 0.25em;
+  }
+
+  .footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    height: 10em;
+    margin-bottom: 6.5em;
+  }
+
+  .footer-logo, .links {
+    width: 33%;
+  }
+
+  .logo, .footer-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .social-media {
+    display: flex;
+    justify-content: space-around;
+    width: 20%;
+  }
+
+  .sm-link {
+    display: block;
+  }
+
+  .links {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: 100%;
+    justify-content: space-between;
+    align-content: space-around;
+  }
+
+  .footer-link {
+    display: flex;
+    align-items: center;
+    height: 33%;
+  }
+
+  .fas.fa-comments, .fas.fa-users, .fas.fa-comment {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    height: 2em;
+    border-radius: 50%;
+    cursor: pointer;
+    background-color: hsl(180, 95%, 42%);
+  }
+
+  .fas.fa-comments {
+    font-size: 3em;
+    width: 2em;
+  }
+
+  .fas.fa-users, .fas.fa-comment {
+    font-size: 2em;
+    width: 2.5em;
+  }
+
+  .comments-icon, .users-container, .comment-container {
+    display: flex;
+    justify-content: flex-end;
+    position: fixed;
+  }
+
+  .comments-icon {
+    bottom: 0.75em;
+    right: 0.75em;
+    z-index: 2;
+    width: min-content;
+  }
+
+  .users-container, .comment-container {
+    bottom: 1.75em;
+    right: 1.25em;
+    opacity: 0.0;
+    z-index: 1;
+    transition: 1s ease-out 0.25s;
+    width: min-content;
+  }
+
+  .comments-icon:hover > .fas.fa-comments {
+    box-shadow: 0 -5px 6px rgba(0,0,0,0.2);
+  }
+
+  .users-container:hover > .fas.fa-users, .comment-container:hover > .fas.fa-comment {
+    box-shadow: 0 -3px 4px rgba(0,0,0,0.2);
+  }
+
+  .comments-icon:hover ~ .users-container, .users-container:hover {
+    bottom: 7.5em;
+    opacity: 1.0;
+  }
+
+  .comments-icon:hover ~ .comment-container, .comment-container:hover, .users-container:hover ~ .comment-container {
+    bottom: 12.5em;
+    opacity: 1.0;
+  }
 }
